2010-09-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

        Reviewed by Darin Adler.

        Fix usage of enum as if it was a define
        https://bugs.webkit.org/show_bug.cgi?id=46355

        pthread.h defines PTHREAD_MUTEX_DEFAULT and PTHREAD_MUTEX_NORMAL as an
        enum.  Hence, it cannot be used by the preprocessor which always
        evaluates that condition as true. This was giving a warning when
        compiling with gcc and "-Wundef" flag.

        The second path, when PTHREAD_MUTEX_DEFAULT is not the same of
        PTHREAD_MUTEX_NORMAL, is not slow. So, let's eliminate the first path
        and get rid of that #if.

        * wtf/ThreadingPthreads.cpp: Always call pthread_mutexattr_init() to
        set mutex type to PTHREAD_MUTEX_NORMAL.
        (WTF::Mutex::Mutex):

2010-09-23  Michael Saboff  <msaboff@apple.com>

        Reviewed by Geoffrey Garen.

        Removed extraneous truncation of ovector on entry and error exit.
        Changed the initialization to -1 of vector to only initialize
        the start indecies, which is sufficient for the pattern/subpatterns.
        Changed the JIT code to not clear the end index for subpatterns
        as it isn't needed.  These changes are worth ~2.7% on v8-regexp.
        https://bugs.webkit.org/show_bug.cgi?id=46404

        * runtime/RegExp.cpp:
        (JSC::RegExp::match):
        * yarr/RegexJIT.cpp:
        (JSC::Yarr::RegexGenerator::generateParenthesesSingle):

2010-09-22  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Only copy captured variables into activation
        https://bugs.webkit.org/show_bug.cgi?id=46330

        We now track free variable information which means that
        we no longer need to copy every variable defined in a
        function.  With this patch activations only retain those
        variables needed for correctness.  In order to interact
        safely with the inspector this means that JSActivation