@@ -1,3 +1,14 @@
+2010-09-23  David Kilzer  <ddkilzer@apple.com>
+
+        <rdar://problem/8460731> ~9.9% speedup when compiling interpreter with llvm-gcc-4.2
+        https://bugs.webkit.org/show_bug.cgi?id=46423
+
+        Reviewed by Oliver Hunt.
+
+        * interpreter/Interpreter.cpp:
+        (JSC::Interpreter::privateExecute): Disable the gcc computed
+        goto hacks added in r55564 when compiling with llvm-gcc-4.2.
+
 2010-09-23  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
 
         Reviewed by Darin Adler.
